objects/ASI_CRM_CN_PreContract_AlignSetting__c.object
<CustomObject>
    <description>Pre-Contract Alignment Setting (CN)</description>
    <fields>
        <fullName>ASI_CRM_CN_Align_Percent__c</fullName>
        <formula>VALUE( TEXT(ASI_CRM_CN_Align__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Align Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Align__c</fullName>
        <description>No Longer Used - Replaced by the number field</description>
        <label>Align %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Alignment_Value__c</fullName>
        <label>Alignment %/Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_By_Percentage_Value__c</fullName>
        <label>By Percentage/Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Pre-Contract Alignment Settings</relationshipLabel>
        <relationshipName>Pre_Contract_Alignment_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_On_Off__c</fullName>
        <label>On/Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;=</fullName>
                    <default>true</default>
                    <label>&gt;=</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>% of Total Trade A&amp;P/GS</fullName>
                </value>
                <value>
                    <fullName>Investment per CR12 eq btl</fullName>
                </value>
                <value>
                    <fullName>Pro-Forma ROI</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pre-Contract Alignment Setting</label>
    <listViews>
        <fullName>ASI_CRM_CN_Precontract_Alignment_Setting</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Align_Percent__c</columns>
        <columns>ASI_CRM_CN_Division__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>ASI_CRM_CN_Align__c</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_PreContract_AlignSetting__c.ASI_CRM_CN_Alignment</value>
        </filters>
        <label>CN Pre-contract Alignment Setting</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PCA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Contract Alignment Settings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Alignment</fullName>
        <active>true</active>
        <label>CN Pre-Contract Alignment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>